prd/pickpro/pickpro-indexing-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickpro-indexing-api
  namespace: pickpro
  labels:
    app: pickpro-indexing-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pickpro-indexing-api
  template:
    metadata:
      labels:
        app: pickpro-indexing-api
        app.kubernetes.io/part-of: soludev-workload
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: pickpro-indexing-api
          image: kaiohz/pickpro:pickpro-indexing-api-e76635e10d4d23b15e76397bf0d1c5503e6b61f1
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /pickpro/rest/v1/health/status
              port: 8000
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /pickpro/rest/v1/health/status
              port: 8000
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              memory: "2Gi"
              cpu: "1500m"
            limits:
              memory: "4Gi"
              cpu: "2000m"
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      imagePullSecrets:
        - name: pickpro-docker-secret
